<resources>
    <string name="app_name">Solfidola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="debug">Debug</string>
    <string name="close">Close</string>
    <string name="drawer_title">Menu</string>
    <string name="menu_solfege">Solfege</string>
    <string name="menu_exercise">Exercises</string>
    <string name="menu_tuner">Tuner</string>
    <string name="playback">Playback mode</string>
    <string name="melodic">Melodic</string>
    <string name="harmonic">Harmonic</string>
    <string name="bar">Music bar</string>
    <string name="show_bar">Show music bar</string>
    <string name="interval">Interval</string>
    <string name="interval_type">Interval: %s</string>
    <string name="asc">ascending</string>
    <string name="desc">descending</string>
    <string name="random">random</string>
    <string name="random_interval_form">Add random interval</string>
    <string name="random_interval">Random interval</string>
    <string name="instrument_selected">Instrument: %s</string>
    <string name="playback_mode">Playback mode: %s</string>
    <string name="instrument">Instrument</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="mic">Microphone</string>
    <string name="setup">Setting up microphone …</string>
    <string name="error_listener">Error listener: %s</string>
    <string name="error_setup">Error setup: %s</string>
    <string name="timeout">Timeout on speech</string>

    <string name="volume_off">Your volume is turned off</string>
    <string name="no_exercises">No exercises, create your first!</string>
    <string name="exercise_delete_confirm">Are you sure you want to delete this exercise?</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="exercise_new">New exercise</string>
    <string name="start">Start</string>
    <string name="stats">Score: %d/%d - Replays: %d - Time: %s</string>
    <string name="interval_select">Select at least two intervals</string>
    <string name="exercise_created">Exercise created</string>
    <string name="intervals">Intervals: %s</string>
    <string name="exercise_last_test">Last test: %s</string>
    <string name="exercising">Exercising</string>
    <string name="match_exact">Exact match: %s</string>
    <string name="match_partial">Partial match: %s</string>
    <string name="listening">Listening …</string>

    <string name="display">Display</string>
    <string name="display_on">Keep display on</string>
    <string name="display_stay_on">Display will stay on</string>
    <string name="display_stay_off">Display will go to sleep after a while</string>
    <string name="number_of_choices">Number of choices</string>
    <string name="play">Play</string>
    <string name="renew">Renew</string>
    <string name="listen">Listen</string>
    <string name="scale">Scale</string>
    <string name="rounds">Rounds per session</string>
    <string name="rounds_value">Rounds per session: %s</string>
    <string name="rounds_current">Round: %d/%d</string>
    <string name="session_done">Session done</string>
    <string name="root">Root</string>
    <string name="root_value">Root: %s</string>
    <string name="pitch_value">Pitch: %f</string>
    <string name="no_tune">/</string>
    <string name="no_pitch">-1</string>
    <string name="pitch_new_note">New note</string>
    <string name="sing_note">Sing %s</string>
    <string name="feedback_nice">Nice!</string>
    <string name="feedback_not_close">Not even close!</string>

    <string-array name="interval_options">
        <item>ascending</item>
        <item>descending</item>
        <item>random</item>
    </string-array>

    <string-array name="root_options">
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>A</item>
        <item>B</item>
        <item>Random</item>
    </string-array>

    <string-array name="round_options">
        <item>Unlimited</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

</resources>
