<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/display"
        android:title="@string/display"
        app:showAsAction="never" />

    <item
        android:id="@+id/numberOfChoices"
        android:title="@string/number_of_choices"
        app:showAsAction="never" />

    <item
        android:id="@+id/sheetMusic"
        android:title="@string/bar"
        app:showAsAction="never" />

    <item
        android:id="@+id/interval"
        android:title="@string/interval"
        app:showAsAction="never" />

    <item
        android:id="@+id/playback"
        android:title="@string/playback"
        app:showAsAction="never" />

    <item
        android:id="@+id/root"
        android:title="@string/root"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/scale"
        android:title="@string/scale"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/instrument"
        android:title="@string/instrument"
        app:showAsAction="never" />

</menu>
